--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "resend": "^3.4.0",
     "zod": "^3.23.8"
   },
@@ -29,6 +30,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
