--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.414.0",
     "react": "^18.3.1",
