Update frontend Dockerfile casing on AS

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Node and tag, development stage
-FROM node:18-bookworm-slim as development
+FROM node:18-bookworm-slim AS development
 
 # Set working directory
 WORKDIR /app
@@ -17,7 +17,7 @@ ARG VITE_API_URL
 RUN VITE_API_URL=${VITE_API_URL} npm run build
 
 # Production stage
-FROM caddy:2-alpine as production
+FROM caddy:2-alpine AS production
 
 COPY Caddyfile /etc/caddy/Caddyfile
 
